--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "gulp-eslint": "^3.0.1",
     "gulp-notify": "^3.0.0",
     "gulp-watch": "^4.3.11",
+    "jasmine": "^2.8.0",
     "node-sass": "^3.13.0",
     "prop-types": "^15.5.10",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "sweetalert-react": "^0.4.10",
     "vinyl-named": "^1.1.0",
+    "wdio-junit-reporter": "^0.3.1",
     "webdriverio": "^4.8.0",
     "webpack": "^1.15.0",
     "webpack-stream": "^3.2.0"
