--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A tic tac game demo with React and ES2015",
   "main": "gulpfile.babel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/wdio test/wdio.conf.js "
   },
   "repository": {
     "type": "git",
@@ -44,13 +44,16 @@
     "gulp-eslint": "^3.0.1",
     "gulp-notify": "^3.0.0",
     "gulp-watch": "^4.3.11",
+    "install": "^0.10.1",
     "jasmine": "^2.8.0",
     "node-sass": "^3.13.0",
+    "npm": "^5.4.2",
     "prop-types": "^15.5.10",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "sweetalert-react": "^0.4.10",
     "vinyl-named": "^1.1.0",
+    "wdio-jasmine-framework": "^0.3.2",
     "wdio-junit-reporter": "^0.3.1",
     "webdriverio": "^4.8.0",
     "webpack": "^1.15.0",
