--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-watch": "^4.3.11",
     "install": "^0.10.1",
     "jasmine": "^2.8.0",
+    "jquery": "^3.2.1",
     "node-sass": "^3.13.0",
     "npm": "^5.4.2",
     "prop-types": "^15.5.10",
@@ -55,6 +56,7 @@
     "vinyl-named": "^1.1.0",
     "wdio-jasmine-framework": "^0.3.2",
     "wdio-junit-reporter": "^0.3.1",
+    "wdio-spec-reporter": "^0.1.2",
     "webdriverio": "^4.8.0",
     "webpack": "^1.15.0",
     "webpack-stream": "^3.2.0"
